updated jsaon to fix number issue

--- a/pretense-scoreboard/sample_config.json
+++ b/pretense-scoreboard/sample_config.json
@@ -1,6 +1,6 @@
 {
   "TOKEN": "DISCORD_BOT_TOKEN",
   "JSON_FILE_PATH": "JSON_SAVE_FILE_LOCATION",
-  "CHANNEL_ID": "CHANNEL_ID_NUMBER",
+  "CHANNEL_ID": CHANNEL_ID_NUMBER,
   "UPDATE_INTERVAL": 60
 }
